--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
 </head>
 <body>
   <header>
-
+<nav>
+    <h3>Mary</h3>
+    <ul>
+        <li><a href="">protfolio</a></li> 
+        <li><a href="">Home</a></li> 
+        <li><a href="">Blog</a></li> 
+        <li><a href=""> <button>Hire Me</button></a></li> 
+    </ul>
+</nav>
   </header>  
   <main>
 
   </main>
   <footer>
-    
+
   </footer>
 </body>
 </html>
